CSS fixes to properly align API Product status with API Product name on app detail page

--- a/css/apigee_devconnect.css
+++ b/css/apigee_devconnect.css
@@ -352,12 +352,23 @@ h4.app-title{
 h4.app-title a:hover{
 	text-decoration: none;
 }
+div.app-info-wrapper {
+    display: inline-block;
+    margin-right: 3em;
+}
 h4.app-product-title{
 	color: #3c3c3c;
 	font-size: 24px;
 	line-height: 24px;
 	margin-bottom: 5px;
 	text-transform: capitalize;
+}
+div.apiproduct-status {
+  color: #3c3c3c;
+  font-size: 18px;
+  display: inline-block;
+  margin-top: 6px; /* app-product-title font-size minus apiproduct-status font-size */
+  vertical-align: top;
 }
 .app-desc{
 	font-size: 15px;
